--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project 2</title>
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/fontello.css">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-
   <link rel='shortcut icon' href='./img/LOGO.png' />
 </head>
 
@@ -37,6 +32,9 @@
         <i class="header-item downloadicon-"></i>
         <i class="header-item search-1icon-"></i>
         <i class="header-item user-oicon-"></i>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, atque provid error ddquos
+          sequi,asperiores vel dolor deserunt culpa eaque recusandae quae nulla voluptatem reiciendis pariatur ducimus
+          laborum perferendis suscipit!</p>
       </div>
     </div>
 
